Added viewport meta tag.

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Learn with Sol</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sol is a web app for creating and sharing short-form, interactive lessons."/>
         <!-- Bootstrap CSS -->
         <link
