--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
         <title>Learn with Sol</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Sol is a web app for creating and sharing short-form, interactive lessons."/>
+
+        <link rel="shortcut icon" href="/public/SolLogo.ico" id="favicon"/>
+
         <!-- Bootstrap CSS -->
         <link
             rel="stylesheet"
